
[TestGenerate/without_createdAt,_updatedAt_(function) - 1]
// This file is generated by github.com/utgwkk/go-transform-struct-gen
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func NewFooFromBar(src *BarModel) *foo.FooModel {
    return &foo.FooModel{
        Id:   src.Id,
        Name: src.Name,
        Age:  src.Age,
    }
}

---

[TestGenerate/without_createdAt,_updatedAt_(method) - 1]
// This file is generated by github.com/utgwkk/go-transform-struct-gen
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func (src *BarModel) ToFoo() *foo.FooModel {
    return &foo.FooModel{
        Id:   src.Id,
        Name: src.Name,
        Age:  src.Age,
    }
}

---

[TestGenerate/without_createdAt,_updatedAt_(method,_no_ref) - 1]
// This file is generated by github.com/utgwkk/go-transform-struct-gen
package bar

import "github.com/utgwkk/go-transform-struct-gen/internal/fixtures/foo"

func (src *BarModel) ToFoo() foo.FooModel {
    return foo.FooModel{
        Id:   src.Id,
        Name: src.Name,
        Age:  src.Age,
    }
}

---
